--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,8 @@ on:
 
 jobs:
   build:
-    runs-on: debian-latest
+    runs-on:
+      labels: arm64-runner
 
     steps:
       - name: Checkout code
