--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          apt-get install coreutils quilt parted qemu-user-static debootstrap zerofree zip \
+          sudo apt-get install coreutils quilt parted qemu-user-static debootstrap zerofree zip \
           dosfstools libarchive-tools libcap2-bin grep rsync xz-utils file git curl bc \
           gpg pigz xxd arch-test bmap-tools
 
