--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,27 +104,64 @@ jobs:
         run: |
           ZIP_PATH=$(find deploy -name "*.zip" | head -n 1)
 
+          if [ -z "$ZIP_PATH" ]; then
+            echo "Error: No ZIP file found in deploy/"
+            exit 1
+          fi
+          
           # Install tools to extract image
+          sudo apt-get update
           sudo apt-get install -y kpartx qemu-user-static unzip
           
           # Unzip
           unzip "$ZIP_PATH" -d deploy
-        
+
           # Find uncompressed image
           IMAGE_PATH=$(find deploy -name "*.img" | head -n 1)
 
+          if [ -z "$IMAGE_PATH" ]; then
+            echo "Error: No .img file found after extraction"
+            exit 1
+          fi
+          
           # Mount image
           sudo mkdir -p /mnt/raspberrypi
           LOOP_DEVICE=$(sudo losetup --find --show "$IMAGE_PATH")
+          
+          # Wait for partitions to be available
+          sleep 2
           sudo partprobe "$LOOP_DEVICE"
+          sleep 2
+          
+          # Check that partition exists
+          if [ ! -e "${LOOP_DEVICE}p2" ]; then
+            echo "Error: Partition ${LOOP_DEVICE}p2 not found"
+            sudo losetup -d "$LOOP_DEVICE"
+            exit 1
+          fi
+          
+          # Mount rootfs partition (usually p2)
           sudo mount "${LOOP_DEVICE}p2" /mnt/raspberrypi
 
+          # Check that mount succeeded
+          if ! mountpoint -q /mnt/raspberrypi; then
+            echo "Error: Failed to mount partition"
+            sudo losetup -d "$LOOP_DEVICE"
+            exit 1
+          fi
+          
           # Create filesystem archive
-          sudo tar -czvf rootfs.tar.gz -C /mnt/raspberrypi .
+          sudo tar -czf rootfs.tar.gz -C /mnt/raspberrypi .
+          
+          # Check that archive was created
+          if [ ! -f "rootfs.tar.gz" ]; then
+            echo "Error: Failed to create rootfs archive"
+            exit 1
+          fi
 
           # Cleanup mount
           sudo umount /mnt/raspberrypi
-          sudo kpartx -d "$IMAGE_PATH"
+          sudo losetup -d "$LOOP_DEVICE"
 
       - name: Create docker file
         if: "${{ inputs.build_docker == '1' }}"
@@ -132,6 +169,7 @@ jobs:
           cat > Dockerfile << EOF
           FROM scratch
           
+          # Copy QEMU static for ARM emulation
           COPY --from=multiarch/qemu-user-static:register /usr/bin/qemu-arm-static /usr/bin/
 
           # Copy root file system
@@ -145,12 +183,10 @@ jobs:
           # Default entrypoint 
           CMD ["/bin/bash"]
           EOF
-          
-          sudo rm rootfs.tar.gzs
 
       - name: Build and push docker image
         if: "${{ inputs.build_docker == '1' }}"
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/arm/v7
@@ -158,6 +194,9 @@ jobs:
           tags: |
             ghcr.io/prismprotocolhub/biomi-pi-gen:bullseye-arm64-latest
             ghcr.io/prismprotocolhub/biomi-pi-gen:bullseye-arm64-${{ github.sha }}
+          # Add buildx driver for multi-platform
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Create artifact name
         id: artifact
