--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,10 @@ name: BIOMI-OS-IMAGE-BUILDER
 env:
   wifi_country: "FR"
 
+permissions:
+  contents: read
+  packages: write
+
 on:
   workflow_dispatch:
     inputs:
@@ -173,13 +177,29 @@ jobs:
           ADD rootfs.tar.gz /
 
           # Configure environment
+          ENV container=docker
           ENV DEBIAN_FRONTEND=noninteractive
           ENV LC_ALL=C.UTF-8
           ENV LANG=C.UTF-8
+          
+          # Remove Docker incompatible services
+          RUN systemctl mask \
+              dev-hugepages.mount \
+              sys-fs-fuse-connections.mount \
+              systemd-udevd \
+              systemd-udevd-kernel.socket \
+              systemd-udevd-control.socket
 
           # Default entrypoint 
           CMD ["/bin/bash"]
           EOF
+
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push docker image
         if: "${{ inputs.build_docker == '1' }}"
